fix overlap on mobile view

--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -2,3 +2,7 @@
     align-items: flex-start;
     margin-left: 10px;
 }
+
+.navbar-nav .searchbar {
+    width: 100%;
+}
